--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
 	<name>gwentopedia-backend</name>
 	<description>Tool for learning Gwent</description>
 
+	<properties>
+	<!-- <java.version>1.8</java.version> -->
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
