--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/gwentopedia?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/gwentopedia?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
