--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,11 @@
 #spring.datasource.username=root
 #spring.datasource.password=
 
+spring.datasource.url=mysql://bc9387166d51c0:f7e46e63@eu-cdbr-west-03.cleardb.net/heroku_7acc22e0041592a?reconnect=true
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
