--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.username=root
 #spring.datasource.password=
 
-spring.datasource.url=mysql://bcd5059c2018ae:2dd84626@eu-cdbr-west-03.cleardb.net/heroku_9ad458dbf7580bf?reconnect=true
+spring.datasource.url=jdbc:mysql://bcd5059c2018ae:2dd84626@eu-cdbr-west-03.cleardb.net/heroku_9ad458dbf7580bf?reconnect=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
